# gridflex

./: .gitignore  pyproject.toml
docs/: 00projectanchor-template.md  prompt1-normal-associate-763211a8.md  prompt2-apathetic-fall-6ad38cd4.md
gridflex/: main.py
gridflex_cli/: __init__.py  cli.py
