[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gridflex-cli"
version = "0.1.0"
authors = [{name = "GridFlex", email = "dasenbrockjw@gmail.com"}]
description = "Project Description"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "GitPython",
    "jinja2>=3.0",
    "codenamize",
    "pytest",
    "pandas",
    "matplotlib",
]

[project.scripts]
zero-ai-dev-framework = "gridflex.cli:main"

[tool.setuptools.packages.find]
include = ["gridflex-cli"]
